syntax = "proto3";

package customer.profile;
import "google/protobuf/timestamp.proto";
option java_package = "org.customer.details";

service  CustomerDetails{
   rpc getCustomerProfile(CustomerProfileRequest) returns (CustomerProfileResponse);
   rpc setCustomerProfile(CustomerProfileAdd) returns (CustomerProfileAddedResponse);
}

message CustomerProfileRequest{
  int32 customerId=1;
}

message CustomerProfileResponse{
  int32 customerId=1;
  string firstName=2;
  string lastName=3;
  string email=4;
  string phoneNumber=5;
  string address=6;
  string customerSegment=7;
  google.protobuf.Timestamp createdDate=8;
}

message CustomerProfileAdd{
  int32 customerId=1;
  string firstName=2;
  string lastName=3;
  string email=4;
  string phoneNumber=5;
  string address=6;
  string customerSegment=7;
  google.protobuf.Timestamp createdDate=8;
}

message CustomerProfileAddedResponse{
  string response=1;
}
