syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "org.customer.details";

service InteractionDetails{
     rpc getInteractionDetails(InteractionDetailsRequest) returns (InteractionDetailsResponse);
     rpc setInteractionDetails(AddInteractionDetails) returns (AddedInteractionDetailsResponse);
}

message InteractionDetailsRequest{
  int32 customerId=1;
}

message InteractionDetailsResponse{
  string interactionId=1;
  int32 customerId=2;
  string channel=3;
  string type=4;
  google.protobuf.Timestamp timestamp=5;
  string description=6;
  string status=7;
}

message AddInteractionDetails{
  string interactionId=1;
  int32 customerId=2;
  string channel=3;
  string type=4;
  google.protobuf.Timestamp timestamp=5;
  string description=6;
  string status=7;
}

message AddedInteractionDetailsResponse{
  string response=1;
}